--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -2,6 +2,6 @@
 <resources>
     <string name="app_name">Simulador</string>
     <string name="cd_simulate">Botão de Simulação de Partidas.</string>
-    <string name="cd_home_team">Imagem do time mandante.</string>
-    <string name="cd_away_team">Time visitante.</string>
+    <string name="cd_home_team">Imagem do Time Mandante.</string>
+    <string name="cd_away_team">Time Visitante.</string>
 </resources>
