--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -4,4 +4,6 @@
     <string name="cd_simulate">Botão de Simulação de Partidas.</string>
     <string name="cd_home_team">Imagem do Time Mandante.</string>
     <string name="cd_away_team">Time Visitante.</string>
+
+    <string name="error_api">Erro Inesperado.</string>
 </resources>
