--- a/app/src/main/res/values-pt-rBR/strings.xml
+++ b/app/src/main/res/values-pt-rBR/strings.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="app_name">Simulador</string>
-    <string name="cd_simulate">Botão de Simulação de Partidas.</string>
-    <string name="cd_home_team">Imagem do Time Mandante.</string>
-    <string name="cd_away_team">Time Visitante.</string>
 
-    <string name="error_api">Erro Inesperado.</string>
+    <string name="cd_simulate">Botão de simulação de partidas.</string>
+    <string name="cd_home_team">Imagem do time mandante.</string>
+    <string name="cd_away_team">Imagem do time visitante.</string>
+
+    <string name="error_api">Erro inesperado.</string>
 </resources>
